# playground

./: .gitignore  README.md  qq.cpp  tree.c
api-builder/: Cargo.toml
api-builder/src/: actix_backend.rs  backend.rs  context.rs  lib.rs  main.rs  service.rs
bincode-storage-value/: Cargo.toml
bincode-storage-value/src/: lib.rs  main.rs  messages.rs
deque/: deque.c
heap/: heap.cpp
http_api_trait/: Cargo.toml  README.md
http_api_trait/doc/: tutorial-ru.md
http_api_trait/http_api/: Cargo.toml
http_api_trait/http_api/examples/: serve.rs
http_api_trait/http_api/src/: lib.rs  warp_backend.rs
http_api_trait/http_api/tests/: http_api.rs  query.rs
http_api_trait/http_api_derive/: Cargo.toml
labs/: 1.c  l1.c  l2.c  l3.c  l3.cpp  l4.c  l5.c  l6.c
labs/fizteh/: lab1.cpp
openGL/: lines.c  lines.h  main.c  openGL.qbs  polygons.c  polygons.h
qt/dialog/: README.md  dialog.qbs  main.cpp
qt/dialog/qml/: Dialog.qml  main.qml
qt/ledEmulator/: blinker.c  blinker.h  ledEmulator.qbs  ledEnulator.qbs  ledmodel.cpp  ledmodel.h  main.cpp
qt/listmerger/: ListMerger.qml  ParentWindow.qml  README.md  TestWindow.qml  main.qml  qml.qrc  storage.js
qt/waitSignal/: main.cpp  quickeventloop.cpp  quickeventloop.h  quickfuture.cpp  quickfuture.h  waitSignal.qbs
swift_vs_rust/: closure.rs  main.swift
swift_vs_rust/closure/: fast.rs  fast.swift  main.rs  main.swift
swift_vs_rust/match/: enum.rs  enum.swift
swift_vs_rust/raster/: Makefile  main.cpp  main.rs  main.swift
training/: Cargo.toml
training/data_structures/: Cargo.toml
training/graphs/: Cargo.toml
(+13 files in other folders)
