[package]
name = "http_api"
version = "0.1.0"
authors = ["Aleksei Sidorov <aleksei.sidorov@xdev.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_api_derive = { path = "../http_api_derive" }
serde_urlencoded = "0.6"
serde_derive = "1.0"
serde = "1.0"